external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_valid/edition_unknown_suffix/Move.snap
---
source: crates/move-package-alt/tests/parsing_tests.rs
---
error: unsupported edition '2024.final', expected one of '2024, 2024.beta, legacy'
  ┌─ tests/data/manifest_parsing_valid/edition_unknown_suffix/Move.toml:3:11
  │
3 │ edition = "2024.final"
  │           ^^^^^^^^^^^^
